--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,39 +7,34 @@
     <link rel="shortcut icon" href="/app/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/app/static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
+    <script src="https://unpkg.com/vue@3"></script>
+    <title>TODO App</title>
 </head>
 <body>
-    <nav id="navbar" class="navbar navbar-light bg-light fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand mb-0 h1" href="#">
-                <img src="/app/static/favicon.ico" alt="" width="32" height="32" class="d-inline-block align-text-top">
-                TODO
-            </a>
-            <!--button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button-->
-        </div>
-    </nav>
-    <div id="main" class="container-fluid">
-        <div id="list_container">
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-action">
-                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                    Do Something
-                </li>
-                <li class="list-group-item list-group-item-action">
-                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                    Do other Something
-                </li>
-                <li class="list-group-item list-group-item-action">
-                    <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
-                    Do more other Something
-                </li>
-              </ul>
+    <div id="app">
+        <nav id="navbar" class="navbar navbar-light bg-light fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand mb-0 h1" href="#">
+                    <img src="/app/static/favicon.ico" alt="" width="32" height="32" class="d-inline-block align-text-top">
+                    {{title}}
+                </a>
+            </div>
+        </nav>
+        <div id="main" class="container-fluid">
+            <div id="list_container">
+                <ul class="list-group">
+                    <li v-for="task in tasks" :key="task.id"class="list-group-item list-group-item-action">
+                        <input class="form-check-input me-1" type="checkbox" :checked="task.done" aria-label="...">
+                        {{task.description}}
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <script src="/app/static/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+        const mountedApp = app.mount("#app")
+    </script>
 </body>
 </html>
