--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,46 +12,19 @@
 </head>
 <body>
     <div id="app">
-        <nav id="navbar" class="navbar navbar-light bg-light fixed-top">
-            <div class="container-fluid">
-                <a class="navbar-brand mb-0 h1" href="#">
-                    <img src="/app/static/favicon.ico" alt="" width="32" height="32" class="d-inline-block align-text-top">
-                    {{title}}
-                </a>
-            </div>
-        </nav>
+        <navbar :title="title"></navbar>
         <div id="main" class="container">
-            <ul v-if="tasks.length > 0" class="list-group">
-                <li v-for="task in tasks" :key="task.id"class="list-group-item list-group-item-action">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col">
-                                <input class="form-check-input me-1" type="checkbox" v-model="task.done">
-                                <label>{{task.description}}</label>
-                            </div>
-                            <div class="col-3 task-btn-div">
-                                <button class="btn btn-danger" @click="deleteTask(task.id)">Delete</button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <div v-else id="no-task-msg" class="list-group-item">
-                You don't have any tasks
-            </div>
-            <form action="#" id="new-task" @submit.prevent="addTask">
-                <div class="mb-3">
-                    <label for="taskDescription" class="form-label">New Task</label>
-                    <input type="text" class="form-control" id="taskDescription" v-model="taskDescription">
-                </div>
-                <button type="submit" class="btn btn-primary">Add Task</button>
-            </form>
+            <task-list :tasks="tasks" @delete-task="deleteTask"></task-list>
+            <task-form @add-task="addTask" :form-status="formStatus" @form-init="formStatus='Init'"></task-form>
         </div>
     </div>
     <script src="/app/static/script.js"></script>
+    <script src="/app/static/components/Navbar.js"></script>
+    <script src="/app/static/components/TaskList.js"></script>
+    <script src="/app/static/components/TaskForm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
-        const mountedApp = app.mount("#app")
+        const mountedApp = app.mount('#app')
     </script>
 </body>
 </html>
